# agent-sdk-price-search

./: .gitignore  LICENSE  README.md  pyproject.toml
apps/price-search-launcher/: pyproject.toml
apps/price-search-launcher/src/price_search_launcher/: __init__.py  bootstrap.py
apps/price-search-launcher/src/price_search_launcher/adapters/: __init__.py
apps/price-search-launcher/src/price_search_launcher/adapters/filesystem/: __init__.py  isolated_workspace.py
apps/price-search-launcher/src/price_search_launcher/adapters/process/: __init__.py  subprocess_price_search_runner.py
apps/price-search-launcher/src/price_search_launcher/adapters/runtime/: __init__.py  docker_runtime_service.py
apps/price-search-launcher/src/price_search_launcher/application/: __init__.py  launch_price_search.py
apps/price-search-launcher/src/price_search_launcher/contracts/: __init__.py  isolated_price_search_request.py  prepared_workspace.py
apps/price-search-launcher/src/price_search_launcher/handler/: __init__.py  launcher.py
apps/price-search-launcher/src/price_search_launcher/ports/: __init__.py  process_runner_port.py  runtime_service_port.py  workspace_port.py
apps/price-search-web-api/: pyproject.toml
apps/price-search-web-api/src/price_search_web_api/: __init__.py  bootstrap.py  config.py
apps/price-search-web-api/src/price_search_web_api/adapters/: __init__.py  local_run_backend.py  run_snapshot_projection.py  run_summary_projection.py  run_timeline_media.py  run_timeline_projection.py
apps/price-search-web-api/src/price_search_web_api/application/: __init__.py  cancel_run.py  delete_run.py  get_run.py  list_runs.py  run_application_service.py  start_run.py
apps/price-search-web-api/src/price_search_web_api/contracts/: __init__.py  create_run_request.py  run_snapshot.py  run_summary.py
apps/price-search-web-api/src/price_search_web_api/handler/: __init__.py  http_server.py
apps/price-search-web-api/src/price_search_web_api/ports/: __init__.py  run_backend_port.py  run_control_port.py  run_launcher_port.py  run_query_port.py
apps/searxng-search-cli/: pyproject.toml
apps/searxng-search-cli/src/searxng_search_cli/: __init__.py  config.py
apps/searxng-search-cli/src/searxng_search_cli/adapters/: __init__.py  self_hosted_search.py
apps/searxng-search-cli/src/searxng_search_cli/application/: run_search.py
apps/searxng-search-cli/src/searxng_search_cli/contracts/: request.py  response.py
apps/searxng-search-cli/src/searxng_search_cli/handler/: __init__.py  cli.py
apps/searxng-search-cli/src/searxng_search_cli/ports/: search_port.py
apps/snapshot-inspect-cli/: pyproject.toml
apps/snapshot-inspect-cli/src/snapshot_inspect_cli/: __init__.py
apps/snapshot-inspect-cli/src/snapshot_inspect_cli/application/: __init__.py  inspect_snapshot.py
apps/snapshot-inspect-cli/src/snapshot_inspect_cli/contracts/: __init__.py  request.py  response.py
apps/snapshot-inspect-cli/src/snapshot_inspect_cli/domain/: __init__.py  models.py  snapshot_parser.py
apps/snapshot-inspect-cli/src/snapshot_inspect_cli/handler/: __init__.py  cli.py
apps/web-search-cli/: pyproject.toml
apps/web-search-cli/src/web_search_cli/: __init__.py  config.py
apps/web-search-cli/src/web_search_cli/adapters/: __init__.py  brave_web_search.py  query_domain_filters.py  result_normalization.py  search_adapter_factory.py  self_hosted_search.py
apps/web-search-cli/src/web_search_cli/contracts/: request.py  response.py
apps/web-search-cli/src/web_search_cli/handler/: __init__.py  cli.py
apps/web-search-cli/src/web_search_cli/ports/: search_port.py
config/: price_search.toml
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
tests/adapters/: test_activity_log_path.py  test_agent_activity_serialization.py  test_brave_web_search.py  test_claude_code_price_research_agent.py  test_claude_code_wrapper.py  test_jsonl_agent_activity_logger.py  test_playwright_cli_output.py  test_read_image_tool.py  test_research_validation_hooks.py  test_sdk_runtime_patches.py  (+1 more)
tools/: log-viewer.html  run-agent.sh  start-frontend.sh  start-web-api.sh  start-web-stack.sh
(+32 files in other folders)
