[project]
name = "price-search-web-api"
version = "0.1.0"
description = "HTTP API for launcher-backed price-search runs."
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = [
  "price-search-core",
  "price-search-launcher",
]

[project.scripts]
price-search-web-api = "price_search_web_api.handler.http_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/price_search_web_api"]

[tool.uv.sources]
price-search-core = { workspace = true }
price-search-launcher = { workspace = true }
