[project]
name = "searxng-search-cli"
version = "0.1.0"
description = "CLI for self-hosted SearXNG discovery."
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
searxng-search = "searxng_search_cli.handler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/searxng_search_cli"]
