[project]
name = "snapshot-inspect-cli"
version = "0.1.0"
description = "CLI that summarizes and searches Playwright snapshot files."
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
snapshot-inspect = "snapshot_inspect_cli.handler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snapshot_inspect_cli"]
