[project]
name = "web-search-cli"
version = "0.1.0"
description = "CLI for provider-backed web discovery."
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
web-search = "web_search_cli.handler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/web_search_cli"]
